Updates from Nobara

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -3,8 +3,14 @@ set -g default-terminal "screen-256color"
 # Prefix set
 set-option -g prefix M-a
 
+# Index set
 set -g base-index 1
+set -g renumber-windows on 
 
+# Mouse on
+set -g mouse on
+
+# Source config
 unbind r
 bind r source-file ~/.tmux.conf
 
