--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,10 +1,12 @@
-set -g default-terminal "screen-256color"
+set-option -g default-terminal "screen-256color"
+set-option -sa terminal-features ',alacritty:RGB'
 
 # Prefix set
 set-option -g prefix M-a
 
 set -g base-index 1
 
+# Reload TMUX config
 unbind r
 bind r source-file ~/.tmux.conf
 
@@ -16,3 +18,8 @@ bind-key -n M-4 select-window -t 4
 bind-key -n M-5 select-window -t 5
 bind-key -n M-6 select-window -t 6
 bind-key -n M-7 select-window -t 7
+
+
+# God knows what
+set-option -sg escape-time 10
+set-option -g focus-events on
